css/BSMpage.css
/* GENERAL AND HEADING ============================================================================================================================*/

.general-group {
  font-family: Century Gothic;
  font-size: 1vw;
  overflow: hidden;
}

.model-heading {
  margin: 0;
  padding: 0;
  margin-top: 1.5vw;
  margin-bottom: 1.5vw;
  text-align: center;
}

.model-heading > pre {
  margin: 0;
  padding: 0;
  font-family: Corbel;
  font-size: 1.5vw;
  color: #555555;
}

/* END GENERAL AND HEADING ========================================================================================================================*/


/* CONTAINERS =====================================================================================================================================*/

/* lightgreen background color test */
#app-container {
  height: 40vw;
  text-align: center;
  background-color: transparent;
}

/* lightblue background color test */
#initial-params-container {
  height: 30vw;
  background-color: transparent;
}

#initial-params-sub-container {
  display: inline-block;
  height: 10vw;
  width: 30vw;
  margin-top: 2.5vw;
  background-color: #a6a6a6;
}

/* lightpink background color test */
#final-params-container {
  opacity: 0;
  height: 39vw;
  background-color: transparent;
}

/* zero width to vertically align #trade-legs-params-container and #current-price-form */
#final-params-sub-container {
  display: inline-block;
  height: 35vw;
  margin-top: 1.5vw;
  background-color: #a6a6a6;
}

#trade-legs-params-container {
  padding-top: 1.25vw;
}

.trade-leg {
  display: inline-block;
  height: 28.5vw;
  width: 20vw;
  padding-left: 1.125vw;
  padding-right: 1.125vw;
}

.leg-sub-container {
  height: 2.725vw;
  margin-bottom: 0.5vw;
  background-color: #fafafa;
}

/* violet background color test */
#output-container {
  opacity: 0;
  height: 39.5vw;
  background-color: transparent;
}

#output-sub-container {
  display: inline-block;
  background-color: #a6a6a6;
}

#output-sub-container-1, #output-sub-container-2 {
  display: inline-block;
  height: 39vw;
}

#output-sub-container-1 {
  width: 12.5vw;
}

#output-sub-container-2 {
  width: 78.25vw;
}

#output-data-tracker, .load-icon {
  background-color: #888888;
}

.load-icon {
  height: 4vw;
  width: 6vw;
  padding-top: 2.5vw;
  color: #9999ff;
}

#output-data-tracker {
  display: inline-block;
  height: 9.375vw;
  width: 11vw;
  margin-top: 0.625vw;
}

#output-view-container, .load-text {
  height: 31vw;
}

.load-text {
  line-height: 31vw;
  text-align: center;
  font-size: 1.75vw;
  color: #9999ff;
}

#output-view-container, #output-summary-container {
  width: 77.5vw;
}

/* aspect ratio is 2.5 : 1 for the #output-view-container */
#output-view-container {
  margin-top: 1vw;
  background-color: #888888;
}

#output-summary-container {
  height: 6.5vw;
  margin-top: 0.375vw;
}

/* END CONTAINERS =================================================================================================================================*/


/* TABLES =========================================================================================================================================*/

#output-summary-table {
  display: inline-block;
  position: relative;
  right: 0.875vw;
  height: 6.5vw;
  width: 65.5vw;
  font-family: Arial;
  font-size: 0.65vw;
  border-spacing: 0;
}

.table-headings {
  height: 1vw;
  background-color: #9999ff;
}

#trade-summary-heading {
  width: 23.5vw;
}

.price-iv-headings, .greek-headings {
  width: 6vw;
}

.summary-group, td {
  height: 0.9vw;
  text-align: center;
  background-color: #eeeeff;
  border-bottom: 1px solid #c5c5c5;
}

.totals-group {
  height: 1vw;
  background-color: #d8d8d8;
  border-bottom: none;
}

.border-right-group {
  border-right: 1px solid;
}

/* END TABLES =====================================================================================================================================*/


/* ALIGNMENT HELPERS ==============================================================================================================================*/

.align-helper {
  display: inline-block;
  text-align: left;
}

#num-legs-align-helper {
  height: 1.5vw;
  width: 13.25vw;
  font-size: 0.95vw;
}

.trade-leg-align-helpers {
  width: 13vw;
}

#current-price-align-helper {
  height: 1.5vw;
  width: 15vw;
  padding-top: 0.25vw;
  font-size: 0.95vw;
}

#output-time-align-helper {
  width: 10.5vw;
  margin-left: 0.30625vw;
  font-size: 0.9vw;
}

/* END ALIGNMENT HELPERS ==========================================================================================================================*/


/* BUTTONS ========================================================================================================================================*/

.buttons {
  height: 1.75vw;
  margin: 0;
  padding: 0;
  margin-left: 1vw;
  border: none;
}

#continue-button-1, #return-button-1, #calculate-button-1 {
  width: 7vw;
  margin-right: 1vw;
}

#output-time-button {
  width: 2.75vw;
  font-size: 0.9vw;
}

#return-button-2 {
  position: relative;
  right: 0.575vw;
  bottom: 3vw;
  width: 10vw;
}

/* END BUTTONS ====================================================================================================================================*/


/* FORMS ==========================================================================================================================================*/

input[type=radio] {
  display: none;
}

input[type=radio] + .radio {
  display: inline-block;
  height: 1vw;
  margin: 0;
  padding-top: 0.25vw;
  padding-bottom: 0.5vw;
  background-color: #d8d8d8;
}

input[type=radio]:checked + .radio {
  color: #ff5555;
}

label.radio.num-legs {
  width: 2vw;
  margin-left: 1vw;
}

label.radio.trade-leg-radios {
  width: 6vw;
  margin-left: 1vw;
  margin-right: 1vw;
}

label.radio.output-data {
  width: 8vw;
  margin-top: 0.625vw;
  margin-bottom: 0.625vw;
  padding-top: 0.375vw;
  padding-bottom: 0.625vw;
}

#num-legs-form, #current-price-form {
  display: inline-block;
  height: 2vw;
  margin: 0;
  padding: 0.5vw;
  background-color: #fafafa;
}

#num-legs-form {
  width: 27vw;
  margin-top: 1vw;
  margin-bottom: 3vw;
  padding-top: 0.75vw;
}

.trade-leg-radio-forms {
  margin: 0;
  padding: 0;
  padding-top: 0.75vw;
  padding-bottom: 0.25vw;
}

.trade-leg-field-forms {
  display: inline-block;
  height: 1.75vw;
  width: 19vw;
  margin: 0;
  padding: 0;
  padding-top: 0.4375vw;
  padding-bottom: 0.5vw;
  text-align: center;
}

#current-price-form {
  margin-top: 0.75vw;
  padding-left: 0.75vw;
  padding-right: 0.75vw;
}

.output-forms {
  display: inline-block;
  width: 11vw;
  margin: 0;
  padding: 0;
  padding-top: 0.5vw;
  background-color: #fafafa;
}

#output-data-form {
  height: 21.125vw;
  margin-top: 1vw;
}

#output-time-form {
  height: 4.25vw;
  margin-top: 0.625vw;
}

/* END FORMS ======================================================================================================================================*/


/* FIELDS =========================================================================================================================================*/

.all-fields {
  display: inline-block;
  margin: 0;
  padding: 0.125vw;
  text-align: center;
  background-color: #ddffdd;
  border: 1px solid #ddffdd;
}

.small-fields {
  height: 1.5vw;
  width: 4vw;
  padding-left: 0.75vw;
}

#current-price-field {
  height: 1.75vw;
  width: 5vw;
  padding-left: 0.5vw;
}

#output-time-field {
  height: 1.5vw;
  width: 4vw;
  margin-top: 0.5vw;
  padding-left: 0.5vw;
}

/* END FIELDS =====================================================================================================================================*/

